--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
-name: Build and Upload DLL
+name: Daily Build and Upload DLL/SO
 
+# 触发条件：master分支推送或手动触发（日常构建验证）
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
   workflow_dispatch:
 
 jobs:
@@ -15,27 +15,9 @@ jobs:
         arch: ['x64']
         python-version: ['3.10', '3.11', '3.12', '3.13']
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-      - run: cargo build --release
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: libraries_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}
-          path: |
-            target/release/*.dll
-            target/release/*.so
-
-      - name: Save Artifact Names
-        run: echo "artifact_name=libraries_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}" >> $GITHUB_ENV
+    # 引用可复用工作流
+    uses: ./.github/workflows/.build-and-upload.yml
+    with:
+      os: ${{ matrix.os }}
+      arch: ${{ matrix.arch }}
+      python-version: ${{ matrix.python-version }}
