--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,27 +12,13 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, ubuntu-22.04]
-        arch: ['x64']
         python-version: ['3.10', '3.11', '3.12', '3.13']
 
     steps:
-      - name: Setup Python environment
-        uses: ./.github/actions/setup-environment
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - uses: ./.github/actioons/build-libraries
         with:
           python-version: ${{ matrix.python-version }}
-
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-      - run: cargo build --release
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: libraries_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}
-          path: |
-            target/release/*.dll
-            target/release/*.so
-
-      - name: Save Artifact Names
-        run: echo "artifact_name=libraries_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}" >> $GITHUB_ENV
+          os: ${{ matrix.os }}
