--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -6,42 +6,24 @@ on:
     branches: [ master ]
 
 jobs:
-  build_and_upload:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-22.04]
-        arch: ['x64']
-        python-version: ['3.13']
-    
+  build:
+    runs-on: ubuntu-22.04
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
+      
+      - name: Set Release Version
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Build Libraries (with Setup Python)
+        uses: ./.github/actions/build-libraries
         with:
-          python-version: ${{ matrix.python-version }}
-
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-      - run: cargo build --release
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: libraries_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}
-          path: |
-            target/release/*.dll
-            target/release/*.so
-
-      - name: Save Artifact Names
-        run: echo "artifact_name=libraries_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}" >> $GITHUB_ENV
+          python-version: 3.13
+          os: ubuntu-22.04
     
   build-multiarch:
     runs-on: ubuntu-latest
-    needs: build_and_upload
+    needs: build
     steps:
       - uses: actions/checkout@v4
       - name: Set env
@@ -49,12 +31,12 @@ jobs:
 
       - name: List Artifacts
         run: |
-          echo "Artifacts available: ${{ needs.build_and_upload.outputs.artifact_name }}"
+          echo "Artifacts available: ${{ needs.build.outputs.artifact_name }}"
   
       - name: Download DLL Artifacts
         uses: actions/download-artifact@v4
         with:
-          name: ${{ needs.build_and_upload.outputs.artifact_name }} # 动态获取工件名称
+          name: ${{ needs.build.outputs.artifact_name }} # 动态获取工件名称
           path: ./dl_libraries
 
       - name: Move downloaded DLLs to libraries folder and clean empty folders
