--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,29 +16,15 @@ jobs:
         python-version: ['3.10', '3.11', '3.12', '3.13']
 
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Build Libraries
+        uses: ./.github/actions/build-libraries
         with:
           python-version: ${{ matrix.python-version }}
+          os: ${{ matrix.os }}
 
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-      - run: cargo build --release
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: libraries_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}
-          path: |
-            target/release/*.dll
-            target/release/*.so
-
-      - name: Save Artifact Names
-        run: echo "artifact_name=libraries_${{ matrix.os }}_${{ matrix.arch }}_${{ matrix.python-version }}" >> $GITHUB_ENV
 
   release_and_publish:
     # 发布到 GitHub Release 和 PyPI
