ci: 测试工作流

--- a/.github/actions/build-libraries/action.yml
+++ b/.github/actions/build-libraries/action.yml
@@ -15,7 +15,8 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: ./.github/actions/setup-environment
+    - name: Setup Environment
+      uses: ./.github/actions/setup-environment
     - run: cargo build --release
       shell: bash
 
