--- a/.github/actions/download-libraries/action.yml
+++ b/.github/actions/download-libraries/action.yml
@@ -23,7 +23,7 @@ runs:
       uses: actions/download-artifact@v4
       with:
         name: ${{ inputs.artifacts }} # 动态获取工件名称
-        path: $RUNNER_TEMP/dl_libraries
+        path: ./tmp_libraries
 
     - name: Process Artifacts
       shell: bash
@@ -31,7 +31,7 @@ runs:
         mkdir -p ${{ inputs.output_target }}
 
         # 处理 Windows DLL 文件
-        for file in $RUNNER_TEMP/dl_libraries/**/*.dll; do
+        for file in ./tmp_libraries/**/*.dll; do
           if [[ $file =~ libraries_windows-latest_x64_([0-9]+)\.([0-9]+) ]]; then
             major="${BASH_REMATCH[1]}"
             minor="${BASH_REMATCH[2]}"
@@ -42,7 +42,7 @@ runs:
         done
 
         # 处理 Linux SO 文件
-        for file in $RUNNER_TEMP/dl_libraries/**/*.so; do
+        for file in ./tmp_libraries/**/*.so; do
           if [[ $file =~ libraries_ubuntu-22.04_x64_([0-9]+)\.([0-9]+) ]]; then
             major="${BASH_REMATCH[1]}"
             minor="${BASH_REMATCH[2]}"
@@ -53,7 +53,7 @@ runs:
         done
 
         # 清理下载目录
-        rm -rf $RUNNER_TEMP/dl_libraries
+        rm -rf ./tmp_libraries
         
     - name: List Artifacts after Download
       run: ls -a ./${{ inputs.output_target }}
