--- a/.github/actions/download-libraries/action.yml
+++ b/.github/actions/download-libraries/action.yml
@@ -1,5 +1,5 @@
-name: Build Libraries
-description: Setup Python
+name: Download Libraries
+description: Download Libraries
 
 inputs:
   artifacts:
