--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -27,25 +27,9 @@ jobs:
         with:
           artifacts: ${{ needs.build_libraries.outputs.artifact_name }}
           output_target: libraries
-    
-  build-multiarch:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+          
+      - name: Build Docker Image
+        uses: ./.github/actions/build-docker-image
         with:
-          username: ${{ secrets.HUB_USERNAME }}
-          password: ${{ secrets.HUB_PASSWORD }}
-
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
           tags: |
             atianxiua/vcmp-python:next
-          platforms: linux/amd64
