--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,59 +33,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Set env
         run: |
           echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
-      - name: List Artifacts
-        run: |
-          echo "Artifacts available: ${{ needs.build_and_upload.outputs.artifact_name }}"
-  
-      - name: Download DLL Artifacts
-        uses: actions/download-artifact@v4
+      - name: Download Libraries
+        uses: ./.github/actions/download-libraries
         with:
-          name: ${{ needs.build_and_upload.outputs.artifact_name }} # 动态获取工件名称
-          path: ./dl_libraries
-
-      - name: Move downloaded DLLs to libraries folder and clean empty folders
-        run: |
-          mkdir -p libraries
-
-          # 处理 Windows DLL 文件
-          for file in dl_libraries/**/*.dll; do
-            if [[ $file =~ libraries_windows-latest_x64_([0-9]+)\.([0-9]+) ]]; then
-              major="${BASH_REMATCH[1]}"
-              minor="${BASH_REMATCH[2]}"
-              version="${major}${minor}"
-              new_name="vcmp-python-plugin-04rel64-rspyo3-py${version}.dll"
-              cp "$file" "libraries/$new_name"
-            fi
-          done
-
-          # 处理 Linux SO 文件
-          for file in dl_libraries/**/*.so; do
-            if [[ $file =~ libraries_ubuntu-22.04_x64_([0-9]+)\.([0-9]+) ]]; then
-              major="${BASH_REMATCH[1]}"
-              minor="${BASH_REMATCH[2]}"
-              version="${major}${minor}"
-              new_name="vcmp-python-plugin-04rel64-rspyo3-py${version}.so"
-              cp "$file" "libraries/$new_name"
-            fi
-          done
-
-          # 清理下载目录
-          rm -rf dl_libraries
-        
-      - name: Copy into vcmp libraries folder
-        run: |
-          mkdir -p ./src/vcmp/libraries
-          cp -r libraries/* ./src/vcmp/libraries
-          
-      - name: List Artifacts after download
-        run: ls -a ./libraries
+          artifacts: ${{ needs.build_and_upload.outputs.artifact_name }}
+          output_target: libraries
 
       - uses: actions/setup-node@v3
         with:
@@ -121,21 +78,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - name: Build Docker Image
+        uses: ./.github/actions/build-docker-image
         with:
-          username: ${{ secrets.HUB_USERNAME }}
-          password: ${{ secrets.HUB_PASSWORD }}
-          
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
           tags: |
             atianxiua/vcmp-python:latest
             atianxiua/vcmp-python:${{ env.RELEASE_VERSION }}
-          platforms: linux/amd64
