--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,6 +81,8 @@ jobs:
       - name: Build Docker Image
         uses: ./.github/actions/build-docker-image
         with:
+          hub_username: ${{ secrets.HUB_USERNAME }}
+          hub_password: ${{ secrets.HUB_PASSWORD }}
           tags: |
             atianxiua/vcmp-python:latest
             atianxiua/vcmp-python:${{ env.RELEASE_VERSION }}
