--- a/.github/actions/build-docker-image/action.yml
+++ b/.github/actions/build-docker-image/action.yml
@@ -5,7 +5,11 @@ inputs:
   tags:
     required: true
 
-  
+  hub_password:
+    required: true
+
+  hub_username:
+    required: true
 
 runs:
   using: "composite"
@@ -16,8 +20,8 @@ runs:
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.HUB_USERNAME }}
-        password: ${{ secrets.HUB_PASSWORD }}
+        username: ${{ inputs.hub_username }}
+        password: ${{ inputs.hub_password }}
 
     - name: Build and push
       uses: docker/build-push-action@v5
