--- a/.github/actions/download-libraries/action.yml
+++ b/.github/actions/download-libraries/action.yml
@@ -36,7 +36,7 @@ runs:
             major="${BASH_REMATCH[1]}"
             minor="${BASH_REMATCH[2]}"
             version="${major}${minor}"
-            new_name="vcmp-python-plugin-04rel64-rspyo3-py${version}.dll"
+            new_name="python04rel64rspyo3py${version}.dll"
             cp "$file" "${{ inputs.output_target }}/$new_name"
           fi
         done
@@ -47,7 +47,7 @@ runs:
             major="${BASH_REMATCH[1]}"
             minor="${BASH_REMATCH[2]}"
             version="${major}${minor}"
-            new_name="vcmp-python-plugin-04rel64-rspyo3-py${version}.so"
+            new_name="python04rel64rspyo3py${version}.so"
             cp "$file" "${{ inputs.output_target }}/$new_name"
           fi
         done
