ci: 工作流没有指定 python 导致全都是编译的 3.10

--- a/.github/actions/build-libraries/action.yml
+++ b/.github/actions/build-libraries/action.yml
@@ -17,6 +17,9 @@ runs:
   steps:
     - name: Setup Environment
       uses: ./.github/actions/setup-environment
+      with:
+        python-version: ${{ inputs.python-version }}
+        
     - run: cargo build --release
       shell: bash
 
