feat: 初步支持 npc 插件

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [workspace]
 members = [
     "crates/vcmp_bindings",
+    "crates/npc_bindings",
     "crates/core"
 ]
-resolver = "2"
+resolver = "3"
 
 [profile.release]
 debug = true 
