feat: 支持 Squirrel FFI (未来拆到另一个插件去)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [workspace]
 members = [
     "crates/vcmp_bindings",
+    "crates/squirrel_ffi_macros",
     "crates/squirrel_ffi",
     "crates/core"
 ]
+
 resolver = "3"
 
 [profile.release]
