--- a/crates/squirrel_ffi/Cargo.toml
+++ b/crates/squirrel_ffi/Cargo.toml
@@ -8,4 +8,5 @@ authors = [
 
 [dependencies]
 vcmp_bindings = { path = "../vcmp_bindings" }
+squirrel_ffi_macros = { path = "../squirrel_ffi_macros" }
 tracing = "0.1.41"
