--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -18,6 +18,7 @@ tracing-subscriber = { version = "0.3.19", features = ["chrono", "fmt", "ansi"] 
 ureq = "3.0.12"
 vcmp_bindings = { path = "../vcmp_bindings" }
 squirrel_ffi = { path = "../squirrel_ffi" }
+squirrel_ffi_macros = { path = "../squirrel_ffi_macros" }
 
 [lib]
 crate-type = ["cdylib"]
