--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/tianxiu2b2t/vcmp-python-plugin"
 [dependencies]
 pyo3 = { version = "0.25.1", features = ["py-clone"]}
 rand = "0.9.1"
+serde = { version = "1.0.219", features = ["derive"] }
 toml = "0.8.23"
 tracing = "0.1.41"
 tracing-appender = "0.2.3"
